--- a/action.yml
+++ b/action.yml
@@ -32,15 +32,21 @@ runs:
       with:
         python-version: ${{inputs.python-version}}
     - run: pip install isort==5.10.1 black==22.3.0 flake8==3.8.4 mypy==0.790
+      shell: bash
     - run: pip install -r requirements.txt
+      shell: bash
     - run: isort --check ${{inputs.source}}
       if: ${{inputs.use-isort}}
+      shell: bash
     - run: black --check ${{inputs.source}}
       if: ${{inputs.use-black}}
+      shell: bash
     - run: flake8 ${{inputs.source}}
       if: ${{inputs.use-flake8}}
+      shell: bash
     - run: mypy --namespace-packages ${{inputs.source}}
       if: ${{inputs.use-mypy}}
+      shell: bash
 branding:
   color: "green"
   icon: "check-square"
