--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,3 +25,11 @@ packages = ["lint_python"]
 
 [tool.setuptools.dynamic]
 version = {attr = "lint_python.__version__"}
+
+[tool.isort]
+multi_line_output = 3
+include_trailing_comma = true
+force_grid_wrap = 0
+use_parentheses = true
+ensure_newline_before_comments = true
+line_length = 88
