--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,8 +11,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build package
       run: |
-        pip3 install setuptools wheel
-        python3 setup.py bdist_wheel
+        pip3 install build
+        python3 -m build --no-isolation
     - name: Publish to PyPi
       uses: pypa/gh-action-pypi-publish@v1.3.0
       with:
