Allow to specify working directory for multiproject repositories

--- a/action.yml
+++ b/action.yml
@@ -32,6 +32,10 @@ inputs:
     description: "Install extra dependencies (type stubs, extensions etc.)"
     required: false
     default: ""
+  working-directory:
+    description: "Set working directory for lint-python"
+    required: false
+    default: "."
 runs:
   using: "composite"
   steps:
@@ -45,6 +49,7 @@ runs:
       if: ${{inputs.install-requirements == 'true'}}
       shell: bash
     - run: lint-python --check --install
+      working-directory: ${{inputs.working-directory}}
       shell: bash
 branding:
   color: "green"
